Cluster/monitoring-manifest/grafana/03-grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  type: ClusterIP # 외부 접속을 위해 NodePort 사용 (혹은 Ingress 설정)
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: grafana
